2000-03-17  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* gc.c, gc.h: Cleanup of the change of 2000-03-15.
	Cluster sizes are now independent of GC trigger values.
	GUILE_GC_TRIGGER_n can now specify a relative trigger value:
	A negative integer gives fraction of total heap size in percent.
	(SCM_GC_TRIGGER_1, SCM_GC_TRIGGER_2): Default values set to -40.

	* init.c (scm_boot_guile_1): Introduced new variable
	GUILE_MAX_SEGMENT_SIZE; New environment variable names:
	GUILE_INIT_SEGMENT_SIZE_1, GUILE_GC_TRIGGER_1,
	GUILE_INIT_SEGMENT_SIZE_2, GUILE_GC_TRIGGER_2

2000-03-16  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
	
	* __scm.h (GC_FREE_SEGMENTS): Disable this until we have made
	freeing of segment work with the new GC scheme.  (Thanks to
	Michael Livshin.)  Oops, also happened to make GUILE_NEW_GC_SCHEME
	the default, but I'll let this change stay in CVS Guile since this
	code is not expected to contain serious bugs.
	
2000-03-16  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* gc.c, gc.h (scm_map_free_list): Define also if GUILE_DEBUG is
	defined.
	(scm_free_list_length): New procedure (GUILE_DEBUG).
	Fixed a small but serious bug introduced by the previous change.

	* gc.c (scm_gc_sweep): Moved variable n_objects to inner sweep
	loop and declare as register.

	* gc.c (scm_gc_sweep): Sigh... forgot to clear private freelists
	after GC.

Wed Mar 15 08:27:04 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* fluids.c: Docstring patch from Keisuke Nishida.  Some
	reindentation, too, and a couple formals renamed.  Should
	fluid-set! return UNSPECIFIED instead of a value?

Wed Mar 15 08:24:58 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* Makefile.am: Separate out DOT_X_FILES and DOT_DOC_FILES, and
	generate the latter from the concrete listing of the former.  Then 
	make guile-procedures.txt depend on DOT_DOC_FILES instead of
	*.doc, so that rebuilding it works.

Wed Mar 15 08:12:14 2000  Greg J. Badros  <gjb@cs.washington.edu>
