@@ -46,7 +46,6 @@
 #include "_scm.h"
 #include "print.h"
 #include "smob.h"
-#include "genio.h"
 #include "dynwind.h"
 #include "fluids.h"
 #include "alist.h"
