@@ -24,7 +24,6 @@
 
 #include <stdio.h>
 #include "_scm.h"
-#include "genio.h"
 #include "smob.h"
 
 #include "mallocs.h"
